apps/base/monitoring-blackbox-exporter/deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring-blackbox-exporter
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
