apps/base/monitoring-blackbox-exporter/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blackbox-exporter
  labels:
    prometheus-target: blackbox-exporter
spec:
  ports:
  - name: https
    port: 9115
    targetPort: https
  - name: probe
    port: 19115
    targetPort: http
  selector:
    app.kubernetes.io/component: exporter
    app.kubernetes.io/name: blackbox-exporter
