apps/base/monitoring-blackbox-exporter/deploy/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-blackbox-exporter
spec:
  types: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: blackbox-exporter
      app.kubernetes.io/component: exporter

  ingress:
    # Allow from prometheus
    - ports:
        - port: http
        - port: https
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring-prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/component: prometheus
              app.kubernetes.io/instance: k8s
              app.kubernetes.io/name: prometheus
